--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 fakestore.api.url=https://fakestoreapi.com
 fakestore.api.productendpoint=/products
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/productservice
+spring.datasource.username=ecommerceproductservice
+spring.datasource.password=.//.x,bcxvc/c.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
