--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 fakestore.api.url=https://fakestoreapi.com
 fakestore.api.productendpoint=/products
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/productservice
 spring.datasource.username=ecommerceproductservice
 spring.datasource.password=.//.x,bcxvc/c.
