--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,13 @@
 			<artifactId>flyway-mysql</artifactId>
 			<version>9.22.2</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.24.2</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
