--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ fakestore.api.productendpoint=/products
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/productservice
-spring.datasource.username=ecommerceproductservice
+spring.datasource.username=ecommerce
 spring.datasource.password=.//.x,bcxvc/c.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
