added spring resource server config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.username=ecommerce
 spring.datasource.password=.//.x,bcxvc/c.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+logging.level.org.springframework.security=TRACE
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081
