--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
+server.port=${PORT}
+
 fakestore.api.url=https://fakestoreapi.com
 fakestore.api.productendpoint=/products
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://localhost:3306/productservice
-spring.datasource.username=ecommerce
-spring.datasource.password=.//.x,bcxvc/c.
+spring.datasource.url=${PRODUCTSERVICE_DB_URL}
+spring.datasource.username=${PRODUCTSERVICE_DB_USERNAME}
+spring.datasource.password=${PRODUCTSERVICE_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 logging.level.org.springframework.security=TRACE
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${USERSERVICE_URI}
