implemented opensearch and servicediscovery

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,16 @@ spring.jpa.show-sql: true
 logging.level.org.springframework.security=TRACE
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${USERSERVICE_URI}
+
+opensearch.uris=${OPENSEARCH_URI}
+opensearch.host=${OPENSEARCH_HOST}
+opensearch.username=${OPENSEARCH_USERNAME}
+opensearch.password=${OPENSEARCH_PASSWORD}
+
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.application.name=productservice
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI}
