--- a/pom.xml
+++ b/pom.xml
@@ -105,11 +105,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.opensearch.client</groupId>
-			<artifactId>spring-data-opensearch-starter</artifactId>
-			<version>1.2.0</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.opensearch.client</groupId>-->
+<!--			<artifactId>spring-data-opensearch-starter</artifactId>-->
+<!--			<version>1.2.0</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
