--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,10 @@ logging.level.org.springframework.security=TRACE
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${USERSERVICE_URI}
 
-opensearch.uris=${OPENSEARCH_URI}
-opensearch.host=${OPENSEARCH_HOST}
-opensearch.username=${OPENSEARCH_USERNAME}
-opensearch.password=${OPENSEARCH_PASSWORD}
+#opensearch.uris=${OPENSEARCH_URI}
+#opensearch.host=${OPENSEARCH_HOST}
+#opensearch.username=${OPENSEARCH_USERNAME}
+#opensearch.password=${OPENSEARCH_PASSWORD}
 
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
