added grafana and prometheus support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.application.name=productservice
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI}
+
+management.endpoints.web.exposure.include=*
